products almost done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <div class="icon_box">
-                    <img src="https://github.com/aaditya-064/BuddhaDanaUdhyog/blob/main/web/cow.png?raw=true" />
+                    <img src="positive.png" />
                     <h4>OPTIMISTIC PRODUCT</h4>
                 </div>
 
@@ -124,6 +124,7 @@
                 <ul class="connect_email_">
                     <input type="email" id="email" class="footer_email" placeholder="Your E-mail">
                 </ul> -->
+                <h2><a href="order.html">Order!</a></h2>
                 <h2><a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank">Locate Us!</a></h2>
         </div>
         </div>
