--- a/products.html
+++ b/products.html
@@ -107,7 +107,7 @@
             <h1>Saurya</h1>
             <div class="products">
                 <div class="broiler">
-                    <img src=".jpg">
+                    <img src="https://images.pexels.com/photos/2006800/pexels-photo-2006800.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
                     <h4>Broiler</h4>
                     <ul class="tags_">
                         <li><a href="">B0</a></li>
@@ -116,8 +116,41 @@
                     </ul>
                 </div>
             </div>
-
         </div>
+
+        <div class="products_description srijan">
+            <h1>Other Feeds</h1>
+            <div class="products">
+                <div class="other">
+                    <img src="pig.jpg">
+                    <h4>Pig Feed</h4>
+                    <ul class="tags_" id="pig">
+                        <li><a href="">P0</a></li>
+                        <li><a href="">P1</a></li>
+                        <li><a href="">P2</a></li>
+                        <li><a href="">P3</a></li>
+                    </ul>
+                </div>
+                <div class="other">
+                    <img src="fish.jpeg">
+                    <h4>Fish Feed</h4>
+                    <ul class="tags_" id="fish">
+                        <li><a href="">Fish Feed Normal</a></li>
+                        <li><a href="">Fish H</a></li>
+                    </ul>
+                </div>
+
+                <div class="other">
+                    <img src="https://images.pexels.com/photos/422218/pexels-photo-422218.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                    <h4 class="cattle_head">Cattle Feed</h4>
+                    <ul class="tags_" id="cattle">
+                        <li><a href="">Cattle 25 KG</a></li>
+                        <li><a href="">Cattle 50 KG</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
 
 
     </div>
@@ -156,6 +189,7 @@
                 <ul class="connect_email_">
                     <input type="email" id="email" class="footer_email" placeholder="Your E-mail">
                 </ul> -->
+                <h2><a href="order.html">Order!</a></h2>
                 <h2><a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank">Locate Us!</a></h2>
         </div>
         </div>
