about us started

--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
                     <a href="index.html"><img src="buddha.png"/></a> 
                     <ul class="nav_links hide">
                         <li><a href="products.html">Products <i class="fa-solid fa-angle-down"></i></a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#">Our Services</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
@@ -193,6 +193,15 @@
                 <h2><a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank">Locate Us!</a></h2>
         </div>
         </div>
+        <fieldset class="contact_way container">
+            <legend>Follow Us!</legend>
+            <ul class="contact_platform">
+            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
+        </fieldset>
     </footer>
 
 
