project done upto about.html

--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="products.css">
-    <link rel="website icon" type="img" href="cow.png">
+    <link rel="website icon" type="img" href="buddha.png">
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -118,9 +118,9 @@
             </div>
         </div>
 
-        <div class="products_description srijan">
+        <div class="products_description other">
             <h1>Other Feeds</h1>
-            <div class="products">
+            <div class="products other">
                 <div class="other">
                     <img src="pig.jpg">
                     <h4>Pig Feed</h4>
@@ -139,7 +139,6 @@
                         <li><a href="">Fish H</a></li>
                     </ul>
                 </div>
-
                 <div class="other">
                     <img src="https://images.pexels.com/photos/422218/pexels-photo-422218.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
                     <h4 class="cattle_head">Cattle Feed</h4>
@@ -148,6 +147,7 @@
                         <li><a href="">Cattle 50 KG</a></li>
                     </ul>
                 </div>
+            </div>
 
             </div>
 
