--- a/broilerPlate.html
+++ b/broilerPlate.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="products.css">
-    <link rel="website icon" type="img" href="cow.png">
+    <link rel="stylesheet" href="broilerPlate.css">
+    <link rel="website icon" type="img" href="buddha.png">
     <script defer src="script.js"></script>
 </head>
 <body>
