about page ma modify xa ra garna baki xa

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <navbar class="nav_bar container">
             <div class="main_div">
                 <div class="nav_left">
-                    <a href="index.html"><img src="buddha.png"/></a> 
+                    <a href="index.html"><img src="/assets/buddha.png"/></a> 
                     <ul class="nav_links hide">
                         <li><a href="products.html">Products <i class="fa-solid fa-angle-down"></i></a></li>
                         <li><a href="about.html">About Us</a></li>
