--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <navbar class="nav_bar container">
             <div class="main_div">
                 <div class="nav_left">
-                    <a href="index.html"><img src="buddha.png"/></a> 
+                    <a href="index.html"><img src="/assets/buddha.png"/></a> 
                     <ul class="nav_links hide"> 
                         <li><a href="products.html">Products <i class="fa-solid fa-angle-down"></i></a></li>
                         <li><a href="about.html">About Us</a></li>
@@ -60,7 +60,7 @@
             <h1>Our Qualities</h1>
             <div class="qualities_">
                 <div class="icon_box">
-                    <img src="delivery.png" />
+                    <img src="/assets/delivery.png" />
                     <h4>FAST DELIVERY</h4>
                 </div>
                 <div class="icon_box">
@@ -69,12 +69,12 @@
                 </div>  
                 
                 <div class="icon_box">
-                    <img src="chicken.png" />
+                    <img src="/assets/chicken.png" />
                     <h4>NUTRIENT RICH FEED</h4>
                 </div>
                 
                 <div class="icon_box">
-                    <img src="positive.png" />
+                    <img src="/assets/positive.png" />
                     <h4>OPTIMISTIC PRODUCT</h4>
                 </div>
 
