--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
         <navbar class="nav_bar container">
             <div class="main_div">
                 <div class="nav_left">
-                    <a href="index.html"><img src="buddha.png"/></a> 
+                    <a href="index.html"><img src="/assets/buddha.png"/></a> 
                     <ul class="nav_links hide">
                         <li><a href="products.html">Products <i class="fa-solid fa-angle-down"></i></a></li>
                         <li><a href="about.html">About Us</a></li>
@@ -57,7 +57,7 @@
             <h1>Shraddha</h1>
             <div class="products">
                 <div class="broiler">
-                    <img src="broiler.jpg">
+                    <img src="/assets/broiler.jpg">
                     <h4>Broiler</h4>
                     <ul class="tags_">
                         <li><a href="">B0</a></li>
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="layers">
-                    <img src="layers.jpg">
+                    <img src="/assets/layers.jpg">
                     <h4>Layers</h4>
                     <ul class="tags_">
                         <li><a href="">L1</a></li>
@@ -83,7 +83,7 @@
             <h1>Srijan</h1>
             <div class="products">
                 <div class="broiler">
-                    <img src="broiler1.jpg">
+                    <img src="/assets/broiler1.jpg">
                     <h4>Broiler</h4>
                     <ul class="tags_">
                         <li><a href="">B0</a></li>
@@ -92,7 +92,7 @@
                     </ul>
                 </div>
                 <div class="giriraj">
-                    <img src="giriraj.jpg">
+                    <img src="/assets/giriraj.jpg">
                     <h4>Giriraj</h4>
                     <ul class="tags_">
                         <li><a href="">G1</a></li>
@@ -122,7 +122,7 @@
             <h1>Other Feeds</h1>
             <div class="products other">
                 <div class="other">
-                    <img src="pig.jpg">
+                    <img src="/assets/pig.jpg">
                     <h4>Pig Feed</h4>
                     <ul class="tags_" id="pig">
                         <li><a href="">P0</a></li>
@@ -132,7 +132,7 @@
                     </ul>
                 </div>
                 <div class="other">
-                    <img src="fish.jpeg">
+                    <img src="/assets/fish.jpeg">
                     <h4>Fish Feed</h4>
                     <ul class="tags_" id="fish">
                         <li><a href="">Fish Feed Normal</a></li>
