changed the images paths

--- a/products.html
+++ b/products.html
@@ -32,22 +32,22 @@
           <div class="broiler_div">
             <div class="left_content">
               <div class="broilerFinisher">
-                <img src="/assets/broilerFinisher.jpg" alt="" />
+                <img src="assets/broilerFinisher.jpg" alt="" />
                 <p>Broiler Finisher</p>
               </div>
 
               <div class="broilerStarter">
-                <img src="/assets/broilerStarter.jpg" alt="" />
+                <img src="assets/broilerStarter.jpg" alt="" />
                 <p>Broiler Starter</p>
               </div>
 
               <div class="broilerPreStarter">
-                <img src="/assets/broilerPreStarter.jpg" alt="" />
+                <img src="assets/broilerPreStarter.jpg" alt="" />
                 <p>Broiler Pre Starter</p>
               </div>
             </div>
             <div class="right_content">
-              <img src="/assets/broiler.jpg" alt="" />
+              <img src="assets/broiler.jpg" alt="" />
               <h3>Broiler Feed</h3>
             </div>
           </div>
@@ -58,23 +58,23 @@
         <div class="products_box">
           <div class="layers_div">
             <div class="left_content">
-              <img src="/assets/layers.jpg" alt="" />
+              <img src="assets/layers.jpg" alt="" />
               <h3>Layers Feed</h3>
             </div>
 
             <div class="right_content">
               <div class="layersFeed">
-                <img src="/assets/layersFeed.jpg" alt="" />
+                <img src="assets/layersFeed.jpg" alt="" />
                 <p>Layers Feed</p>
               </div>
 
               <div class="layersGrower">
-                <img src="/assets/layersGrower.jpg" alt="" />
+                <img src="assets/layersGrower.jpg" alt="" />
                 <p>Layers Grower</p>
               </div>
 
               <div class="layersStarter">
-                <img src="/assets/layersStarter.jpg" alt="" />
+                <img src="assets/layersStarter.jpg" alt="" />
                 <p>Layers Starter</p>
               </div>
             </div>
@@ -87,12 +87,12 @@
           <div class="pig_div">
             <div class="left_content">
               <div class="pigFinisher">
-                <img src="/assets/pigFinisher.jpg" alt="" />
+                <img src="assets/pigFinisher.jpg" alt="" />
                 <p>Pig Finisher Feed</p>
               </div>
             </div>
             <div class="right_content">
-              <img src="/assets/pig.jpg" alt="" />
+              <img src="assets/pig.jpg" alt="" />
               <h3>Pig Feed</h3>
             </div>
           </div>
@@ -103,12 +103,12 @@
         <div class="products_box">
           <div class="fish_div">
             <div class="left_content">
-              <img src="/assets/fish.jpeg" alt="" />
+              <img src="assets/fish.jpeg" alt="" />
               <h3>Fish Feed</h3>
             </div>
             <div class="right_content">
               <div class="fishFeed">
-                <img src="/assets/fishFeed.jpg" alt="" />
+                <img src="assets/fishFeed.jpg" alt="" />
                 <p>Fish Feed</p>
               </div>
             </div>
@@ -124,12 +124,12 @@
           <div class="giriraj_div">
             <div class="left_content">
               <div class="girirajStarter">
-                <img src="/assets/sirjanGirirajStarterG1.jpg" alt="" />
+                <img src="assets/sirjanGirirajStarterG1.jpg" alt="" />
                 <p>Giriraj Feed</p>
               </div>
             </div>
             <div class="right_content">
-              <img src="/assets/giriraj.jpg" alt="" />
+              <img src="assets/giriraj.jpg" alt="" />
               <h3>Giriraj Feed</h3>
             </div>
           </div>
@@ -140,16 +140,16 @@
         <div class="products_box">
           <div class="broilerSirjan_div">
             <div class="left_content">
-              <img src="/assets/broiler.jpg" alt="" />
+              <img src="assets/broiler.jpg" alt="" />
               <h3>Broiler Feed</h3>
             </div>
             <div class="right_content">
               <div class="broilerGrower">
-                <img src="/assets/sirjanBroilerGrowerB2.jpg" alt="" />
+                <img src="assets/sirjanBroilerGrowerB2.jpg" alt="" />
                 <p>Broiler Grower Feed</p>
               </div>
               <div class="broilerPreStarter">
-                <img src="/assets/sirjanBroilerPreStarterB0.jpg" alt="" />
+                <img src="assets/sirjanBroilerPreStarterB0.jpg" alt="" />
                 <p>Broiler Pre Starter Feed</p>
               </div>
             </div>
