--- a/about.html
+++ b/about.html
@@ -12,34 +12,13 @@
     />
     <link rel="stylesheet" href="about.css" />
     <link rel="website icon" type="img" href="buddha.png" />
-    <script defer src="script.js"></script>
+    <script defer src="about.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2c92abfc3e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <navbar class="nav_bar container">
-        <div class="main_div">
-          <div class="nav_left">
-            <a href="index.html"><img src="/assets/buddha.png" /></a>
-            <ul class="nav_links hide">
-              <li>
-                <a href="products.html"
-                  >Products <i class="fa-solid fa-angle-down"></i
-                ></a>
-              </li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Our Services</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="nav_right">
-            <ul class="nav_links hide">
-              <button class="menu">MENU</button>
-            </ul>
-          </div>
-        </div>
-      </navbar>
-    </header>
-
     <main>
       <div class="about_ container">
         <h1>About Us</h1>
@@ -91,64 +70,6 @@
         </p>
       </div>
     </main>
-
-    <footer>
-      <div class="main_footer container">
-        <div class="company_info">
-          <h1>BDU PVT. LTD.</h1>
-          <h4>Siyari- 05, Rupandehi</h4>
-          <h4>Banghusari</h4>
-          <h4>071-413121</h4>
-          <h4>+977-9847045028</h4>
-          <h4>buddha.feeds@gmail.com</h4>
-        </div>
-
-        <div class="company_features">
-          <ul class="company_features_list">
-            <li><a href="">Our Portfolio</a></li>
-            <li><a href="">Our Profile</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
-          </ul>
-        </div>
-
-        <div class="company_services">
-          <!-- <h2>Get our high quality services</h2>
-                <h3>Input your E-mail for us to contact</h3>
-                <ul class="connect_email_">
-                    <input type="email" id="email" class="footer_email" placeholder="Your E-mail">
-                </ul> -->
-          <h2><a href="order.html">Order!</a></h2>
-          <h2>
-            <a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank"
-              >Locate Us!</a
-            >
-          </h2>
-        </div>
-      </div>
-      <fieldset class="contact_way container">
-        <legend>Follow Us!</legend>
-        <ul class="contact_platform">
-          <li>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-          </li>
-        </ul>
-      </fieldset>
-    </footer>
-
-    <script
-      src="https://kit.fontawesome.com/2c92abfc3e.js"
-      crossorigin="anonymous"
-    ></script>
+    
   </body>
 </html>
