changed the paths of images in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <navbar class="nav_bar container">
         <div class="main_div">
           <div class="nav_left">
-            <a href="index.html"><img src="/assets/buddha.png" /></a>
+            <a href="index.html"><img src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/buddha.png" /></a>
             <ul class="nav_links hide">
               <li>
                 <a href="products.html"
@@ -78,7 +78,7 @@
           <h1>Our Qualities</h1>
           <div class="qualities_">
             <div class="icon_box">
-              <img src="/assets/delivery.png" />
+              <img src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/delivery.png" />
               <h4>FAST DELIVERY</h4>
             </div>
             <div class="icon_box">
@@ -89,12 +89,12 @@
             </div>
 
             <div class="icon_box">
-              <img src="/assets/chicken.png" />
+              <img src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/chicken.png" />
               <h4>NUTRIENT RICH FEED</h4>
             </div>
 
             <div class="icon_box">
-              <img src="/assets/positive.png" />
+              <img src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/positive.png" />
               <h4>OPTIMISTIC PRODUCT</h4>
             </div>
           </div>
