--- a/products.html
+++ b/products.html
@@ -27,9 +27,9 @@
             <button id="sirjan">Sirjan</button>
         </section>
         <section class="shraddhaProducts hideShraddha">
-      <section class="broiler">
+      <section class="right">
         <div class="products_box">
-          <div class="broiler_div">
+          <div class="right_div">
             <div class="left_content">
               <div class="broilerFinisher">
                 <img src="assets/broilerFinisher.jpg" alt="" />
@@ -47,18 +47,18 @@
               </div>
             </div>
             <div class="right_content">
-              <img src="assets/broiler.jpg" alt="" />
+              <img src="assets/broiler.png" alt="" class="main_img" />
               <h3>Broiler Feed</h3>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="layers">
+      <section class="left">
         <div class="products_box">
-          <div class="layers_div">
+          <div class="left_div">
             <div class="left_content">
-              <img src="assets/layers.jpg" alt="" />
+              <img src="assets/layers.png" alt="" class="main_img" />
               <h3>Layers Feed</h3>
             </div>
 
@@ -82,9 +82,9 @@
         </div>
       </section>
 
-      <section class="pig">
+      <section class="right">
         <div class="products_box">
-          <div class="pig_div">
+          <div class="right_div">
             <div class="left_content">
               <div class="pigFinisher">
                 <img src="assets/pigFinisher.jpg" alt="" />
@@ -92,18 +92,18 @@
               </div>
             </div>
             <div class="right_content">
-              <img src="assets/pig.jpg" alt="" />
+              <img src="assets/pig.png" alt="" class="main_img" />
               <h3>Pig Feed</h3>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="fish">
+      <section class="left">
         <div class="products_box">
-          <div class="fish_div">
+          <div class="left_div">
             <div class="left_content">
-              <img src="assets/fish.jpeg" alt="" />
+              <img src="assets/fish.png" alt="" class="main_img" />
               <h3>Fish Feed</h3>
             </div>
             <div class="right_content">
@@ -115,13 +115,30 @@
           </div>
         </div>
       </section>
+
+      <section class="right">
+        <div class="products_box">
+          <div class="right_div">
+            <div class="left_content">
+              <div class="cattleFeed">
+                <img src="assets/cowBuffaloFeed.jpg" alt="" />
+                <p>Cattle Feed</p>
+              </div>
+            </div>
+            <div class="right_content">
+              <img src="assets/cow.png" alt="" class="main_img" />
+              <h3>Cattle Feed</h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
 
       <!-- sirjan -->
       <section class="sirjanProducts hideSirjan">
-      <section class="giriraj">
+      <section class="right">
         <div class="products_box">
-          <div class="giriraj_div">
+          <div class="right_div">
             <div class="left_content">
               <div class="girirajStarter">
                 <img src="assets/sirjanGirirajStarterG1.jpg" alt="" />
@@ -129,18 +146,18 @@
               </div>
             </div>
             <div class="right_content">
-              <img src="assets/giriraj.jpg" alt="" />
+              <img src="assets/giriraj.png" alt="" class="main_img" />
               <h3>Giriraj Feed</h3>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="broilerSirjan">
+      <section class="left">
         <div class="products_box">
-          <div class="broilerSirjan_div">
+          <div class="left_div">
             <div class="left_content">
-              <img src="assets/broiler.jpg" alt="" />
+              <img src="assets/broiler2.png" alt="" class="main_img" />
               <h3>Broiler Feed</h3>
             </div>
             <div class="right_content">
