--- a/signUp.html
+++ b/signUp.html
@@ -26,7 +26,7 @@
 
     <main>
         <section class="signUpPage">
-            <img src="/assets/osho2.jpg" alt="">
+            <img src="https://github.com/aaditya-064/BDU-WEB-PROJECT/blob/main/assets/osho2.jpg" alt="">
     <div class="content_div">
         <p>REGISTER NOW</p>
         <h2>Welcome To Buddha Dana Udhyog</h2>
