edited in responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <header>
-
       <nav class="top_nav">
         <div class="connection_div container">
           <h4><a href="signUp.html">Sign Up</a></h4>
@@ -28,41 +27,39 @@
         <div class="main_nav container">
           <div class="main_div">
             <div class="nav_left">
-            <p id="namePrint" class="namePrint"></p>
-            <a href="index.html"
-              ><img
-                src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/buddha.png"
-            /></a>
-          </div>
-          <div class="nav_right">
-            <ul class="nav_links hide">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="products.html">Our Products</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Profile</a></li>
-            </ul>
-            <div class="button_div">
-              <button id="logOut" class="logOutButton">Log Out</button>
+              <!-- <p id="namePrint" class="namePrint"></p> -->
+              <a href="index.html"
+                ><img
+                  src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/buddha.png"
+              /></a>
             </div>
-            <ul class="nav_links hide">
+            <div class="nav_right">
+              <ul class="nav_links hide">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Our Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Profile</a></li>
+              </ul>
+              <div class="button_div">
+                <button id="logOut" class="logOutButton">Log Out</button>
+              </div>
               <button class="menu">MENU</button>
-            </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
-  
-  <main>
-    <div class="content">
-      <img
-      src="https://lh3.googleusercontent.com/p/AF1QipN-P-HzB4VZk37_kl7Qz9dY936hQ4TSevue7drU=s1360-w1360-h1020"
-      />
-      
-      <div class="inside_text">
-        <div class="inside_text_content">
+      </nav>
+    </header>
+
+    <main>
+      <div class="content">
+        <img
+          src="https://lh3.googleusercontent.com/p/AF1QipN-P-HzB4VZk37_kl7Qz9dY936hQ4TSevue7drU=s1360-w1360-h1020"
+        />
+
+        <div class="inside_text">
+          <div class="inside_text_content">
             <h1>Buddha Dana Udhyog Pvt. Ltd.</h1>
             <h4>
               Innovating feed solutions for sustainable agriculture in Nepal
@@ -74,10 +71,10 @@
             <form id="main_form">
               <div class="connect_email_">
                 <input
-                type="email"
-                id="email"
-                class="email_"
-                placeholder="Enter your Email Address"
+                  type="email"
+                  id="email"
+                  class="email_"
+                  placeholder="Enter your Email Address"
                 />
                 <button type="submit" id="btn" class="btn_" onclick="addData()">
                   Submit
@@ -87,7 +84,7 @@
           </ul>
         </div>
       </div>
-      
+
       <section class="container">
         <div class="sub_div">
           <h1>Our Qualities</h1>
