--- a/signUp.html
+++ b/signUp.html
@@ -1,63 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
-    <link rel="stylesheet" href="signUp.css">
-    <script src="https://kit.fontawesome.com/2c92abfc3e.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="signUp.css" />
+    <script
+      src="https://kit.fontawesome.com/2c92abfc3e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="signUp.js"></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <header>
-        <nav class="nav_bar container">
-            <h3 class="buddhaDana"><span>Buddha</span>Dana Udhyog</h3>
-            <div class="signInCheck">   
-                <p>Have an account?</p>
-                <a href="logIn.html"><button class="logInButton">Log In</button></a>
-            </div>
-        </nav>
+        <h3 class="buddhaDana"><span>Buddha</span>Dana Udhyog</h3>
+        <div class="signInCheck">
+          <p>Have an account?</p>
+          <a href="logIn.html"><button class="logInButton">Log In</button></a>
+        </div>
+      </nav>
     </header>
-    
 
     <main>
-        <section class="signUpPage">
-            <img src="https://github.com/aaditya-064/BDU-WEB-PROJECT/blob/main/assets/osho2.jpg" alt="">
-    <div class="content_div">
-        <p>REGISTER NOW</p>
-        <h2>Welcome To Buddha Dana Udhyog</h2>
+      <section class="signUpPage">
+        <img
+          src="https://github.com/aaditya-064/BDU-WEB-PROJECT/blob/main/assets/osho2.jpg"
+          alt=""
+        />
+        <div class="content_div">
+          <p>REGISTER NOW</p>
+          <h2>Welcome To Buddha Dana Udhyog</h2>
 
-        <form class="inputForm">
+          <form class="inputForm">
             <div class="inputArea">
-                <div class="name_">
-            <input id="firstName" type="text" placeholder="First Name"> 
-            <input id="lastName" type="text" placeholder="Last Name"> 
-        </div>
-            <input id="email" type="email" placeholder="Email"> 
-            <input id="password" type="password" placeholder="Password">
-        </div>
+              <div class="name_">
+                <input id="firstName" type="text" placeholder="First Name" />
+                <input id="lastName" type="text" placeholder="Last Name" />
+              </div>
+              <input id="email" type="email" placeholder="Email" />
+              <input id="password" type="password" placeholder="Password" />
+            </div>
             <div class="termsAndAgreement">
-            <input id="checkbox_" type="checkbox">
-            <p class="agreement">I agree to the processing of personal data</p>
-        </div>
-            <a href="" class="aTagSignUp"><button id="signUpButton" class="signUpButton">Sign Up</button></a>
-        </form>
+              <input id="checkbox_" type="checkbox" />
+              <p class="agreement">
+                I agree to the processing of personal data
+              </p>
+            </div>
+            <a href="" class="aTagSignUp"
+              ><button id="signUpButton" class="signUpButton">
+                Sign Up
+              </button></a
+            >
+          </form>
 
-        <div class="signUpWith">
+          <div class="signUpWith">
             <h4>Sign Up With</h4>
             <ul class="medias">
-            <a href=""><li><i class="fa-brands fa-google"></i></li></a>
-            <a href=""><li><i class="fa-brands fa-apple"></i></li></a>
-            <a href=""><li><i class="fa-brands fa-facebook-f"></i></li></a>
-        </ul>
+              <a href=""
+                ><li><i class="fa-brands fa-google"></i></li
+              ></a>
+              <a href=""
+                ><li><i class="fa-brands fa-apple"></i></li
+              ></a>
+              <a href=""
+                ><li><i class="fa-brands fa-facebook-f"></i></li
+              ></a>
+            </ul>
+          </div>
         </div>
-
-    </div>
-</section>
-</main>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
