added nav bar and footer in products and did some changes in js of products

--- a/broilerPlate.html
+++ b/broilerPlate.html
@@ -1,91 +1,113 @@
 <!DOCTYPE html5>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buddha Dana Udhyog | We produce productive animal products</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="broilerPlate.css">
-    <link rel="website icon" type="img" href="buddha.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="website icon" type="img" href="buddha.png" />
     <script defer src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <navbar class="nav_bar container">
-            <div class="main_div">
-                <div class="nav_left">
-                    <a href="index.html"><img src="buddha.png"/></a> 
-                    <ul class="nav_links hide">
-                        <li><a href="products.html">Products <i class="fa-solid fa-angle-down"></i></a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                    
-                </div>
-                <div class="nav_right">
-                    <ul class="nav_links hide">
-                        <button class="menu">MENU</button>    
-                    </ul>
-                </div>
+      <nav class="top_nav">
+        <div class="connection_div container">
+          <h4><a href="signUp.html">Sign Up</a></h4>
+          <p>or</p>
+          <h4><a href="logIn.html">Log In</a></h4>
+        </div>
+      </nav>
+      <nav id="sticky_nav" class="nav_bar">
+        <div class="main_nav container">
+          <div class="main_div">
+            <div class="nav_left">
+              <!-- <p id="namePrint" class="namePrint"></p> -->
+              <a href="index.html"
+                ><img
+                  src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/buddha.png"
+              /></a>
             </div>
-        </navbar>
+            <div class="nav_right">
+              <ul class="nav_links hide">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Our Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Profile</a></li>
+              </ul>
+              <div class="button_div">
+                <button id="logOut" class="logOutButton">Log Out</button>
+              </div>
+              <button class="menu">MENU</button>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
-
-
-    <main>
-
-        
-    </main>
-
-
     <footer>
-        <div class="main_footer container">
-            <div class="company_info">
-                <h1>BDU PVT. LTD.</h1>
-                <h4>Siyari- 05, Rupandehi</h4>
-                <h4>Banghusari</h4>
-                <h4>071-413121</h4>
-                <h4>+977-9847045028</h4>
-                <h4>buddha.feeds@gmail.com</h4>
-            </div>
+      <div class="main_footer container">
+        <div class="company_info">
+          <h1>BDU PVT. LTD.</h1>
+          <h4>Siyari- 05, Rupandehi</h4>
+          <h4>Banghusari</h4>
+          <h4>071-413121</h4>
+          <h4>+977-9847045028</h4>
+          <h4>buddha.feeds@gmail.com</h4>
+        </div>
 
-            <div class="company_features">
-                <ul class="company_features_list">
-                    <li><a href="">Our Portfolio</a></li>
-                    <li><a href="">Our Profile</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Contact Us</a></li>
-                </ul>
-            </div>
+        <div class="company_features">
+          <ul class="company_features_list">
+            <li><a href="">Our Profile</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
 
-            <div class="company_services">
-                <!-- <h2>Get our high quality services</h2>
+        <div class="company_services">
+          <!-- <h2>Get our high quality services</h2>
                 <h3>Input your E-mail for us to contact</h3>
                 <ul class="connect_email_">
                     <input type="email" id="email" class="footer_email" placeholder="Your E-mail">
                 </ul> -->
-                <h2><a href="order.html">Order!</a></h2>
-                <h2><a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank">Locate Us!</a></h2>
+          <h2><a href="order.html">Order!</a></h2>
+          <h2>
+            <a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank"
+              >Locate Us!</a
+            >
+          </h2>
         </div>
-        </div>
-        <fieldset class="contact_way container">
-            <legend>Follow Us!</legend>
-            <ul class="contact_platform">
-            <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+      </div>
+      <fieldset class="contact_way container">
+        <legend>Follow Us!</legend>
+        <ul class="contact_platform">
+          <li>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          </li>
         </ul>
-        </fieldset>
+      </fieldset>
     </footer>
 
-
-    <script src="https://kit.fontawesome.com/2c92abfc3e.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/2c92abfc3e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
-
