--- a/products.html
+++ b/products.html
@@ -21,6 +21,43 @@
     <script defer src="products.js"></script>
   </head>
   <body>
+    <header>
+      <!-- <nav class="top_nav">
+        <div class="connection_div container">
+          <h4><a href="signUp.html">Sign Up</a></h4>
+          <p>or</p>
+          <h4><a href="logIn.html">Log In</a></h4>
+        </div>
+      </nav> -->
+      <nav class="nav_bar">
+        <div class="main_nav container">
+          <div class="main_div">
+            <div class="nav_left">
+              <!-- <p id="namePrint" class="namePrint"></p> -->
+              <a href="index.html"
+                ><img
+                  src="https://aaditya-064.github.io/BDU-WEB-PROJECT/assets/buddha.png"
+              /></a>
+            </div>
+            <div class="nav_right">
+              <ul class="nav_links hide">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Our Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Profile</a></li>
+              </ul>
+              <div class="button_div">
+                <button id="logOut" class="logOutButton">Log Out</button>
+              </div>
+              <button class="menu">MENU</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
     <main>
         <section class="brandButton container">
             <button id="shraddha">Shraddha</button>
@@ -175,5 +212,58 @@
       </section>
     </section>
     </main>
+
+    <footer>
+      <div class="main_footer container">
+        <div class="company_info">
+          <h1>BDU PVT. LTD.</h1>
+          <h4>Siyari- 05, Rupandehi</h4>
+          <h4>Banghusari</h4>
+          <h4>071-413121</h4>
+          <h4>+977-9847045028</h4>
+          <h4>buddha.feeds@gmail.com</h4>
+        </div>
+
+        <div class="company_features">
+          <ul class="company_features_list">
+            <li><a href="">Our Profile</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="company_services">
+          <!-- <h2>Get our high quality services</h2>
+                <h3>Input your E-mail for us to contact</h3>
+                <ul class="connect_email_">
+                    <input type="email" id="email" class="footer_email" placeholder="Your E-mail">
+                </ul> -->
+          <h2><a href="order.html">Order!</a></h2>
+          <h2>
+            <a href="https://maps.app.goo.gl/QmgGqhRePCbXciue8" target="blank"
+              >Locate Us!</a
+            >
+          </h2>
+        </div>
+      </div>
+      <fieldset class="contact_way container">
+        <legend>Follow Us!</legend>
+        <ul class="contact_platform">
+          <li>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+        </ul>
+      </fieldset>
+    </footer>
   </body>
 </html>
