idk what I have done lately

--- a/signUp.html
+++ b/signUp.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <header>
+      <nav class="nav_bar">
         <h3 class="buddhaDana"><span>Buddha</span>Dana Udhyog</h3>
         <div class="signInCheck">
           <p>Have an account?</p>
@@ -29,10 +30,7 @@
 
     <main>
       <section class="signUpPage">
-        <img
-          src="https://github.com/aaditya-064/BDU-WEB-PROJECT/blob/main/assets/osho2.jpg"
-          alt=""
-        />
+        <img src="" alt="" />
         <div class="content_div">
           <p>REGISTER NOW</p>
           <h2>Welcome To Buddha Dana Udhyog</h2>
