--- a/logIn.html
+++ b/logIn.html
@@ -32,10 +32,7 @@
 
     <main>
       <section class="logInPage">
-        <img
-          src="https://github.com/aaditya-064/BDU-WEB-PROJECT/blob/main/assets/osho.jpg"
-          alt=""
-        />
+        <img src="" alt="" />
         <div class="content_div">
           <p>START YOUR JOURNEY</p>
           <h2>Hi, Welcome Back!</h2>
